salesforce/force-app/main/default/objects/RY_Application__c/RY_Application__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Proposed Red and Yellow demonstration model; not verified against an existing org.</description><enableReports>true</enableReports><label>RY Application</label><nameField><displayFormat>RY-{000000}</displayFormat><label>Application Number</label><type>AutoNumber</type></nameField><pluralLabel>RY Application Records</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>