salesforce/force-app/main/default/objects/RY_Application__c/fields/Decision_Date__c.field-meta.xml
<CustomField><fullName>Decision_Date__c</fullName><label>Decision Date</label><required>false</required><type>Date</type></CustomField>