salesforce/force-app/main/default/objects/RY_Application__c/fields/Intake__c.field-meta.xml
<CustomField><fullName>Intake__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Intake</label><referenceTo>RY_Intake__c</referenceTo><relationshipLabel>Intake Records</relationshipLabel><relationshipName>RY_Application_Intake</relationshipName><required>false</required><type>Lookup</type></CustomField>