salesforce/force-app/main/default/objects/RY_Application__c/fields/Opportunity__c.field-meta.xml
<CustomField><fullName>Opportunity__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Opportunity</label><referenceTo>Opportunity</referenceTo><relationshipLabel>Opportunity Records</relationshipLabel><relationshipName>RY_Application_Opportunity</relationshipName><required>false</required><type>Lookup</type></CustomField>