salesforce/force-app/main/default/objects/RY_Application__c/fields/Submitted_Date__c.field-meta.xml
<CustomField><fullName>Submitted_Date__c</fullName><label>Submitted Date</label><required>false</required><type>Date</type></CustomField>